Fragment one - part one and section one -  menu elements were adjusted to no longer have a gap.

--- a/demo_header_menu.css
+++ b/demo_header_menu.css
@@ -188,7 +188,6 @@ justify-content: center;
 width: 200px;
 height: auto;
 margin: 5px;
-gap:10px;
 background-color: rgb(255, 186, 186);
 }
 
